# realtime-voice-changer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
tests/: helpers.py  test_dsp.py
voicechanger/: __init__.py  __main__.py  cli.py  config.py  effects.py  engine.py  gui.py  presets.py  psola.py  ringbuffer.py
