[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-voice-changer"
version = "1.0.0"
description = "Lightweight real-time voice changer (TD-PSOLA) for Discord and other VoIP apps"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "NTUquantum" }]
keywords = ["voice-changer", "psola", "dsp", "real-time", "audio", "discord", "pitch-shift", "formant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/NTUquantum/realtime-voice-changer"
Issues = "https://github.com/NTUquantum/realtime-voice-changer/issues"

[project.scripts]
voicechanger = "voicechanger.cli:main"

[project.gui-scripts]
voicechanger-gui = "voicechanger.cli:main"

[tool.setuptools]
packages = ["voicechanger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
